added photos to about page and added hamburger menu

--- a/about.html
+++ b/about.html
@@ -13,12 +13,98 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./about.css" />
     <title>AMIMUN'22 | Home</title>
   </head>
   <body>
     <div id="back">
+      <nav id="main-navigation" class="nav-main">
+        <ul class="menu">
+          <li class="menu__item">
+            <a class="menu__link" href="./about.html">About</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="">Our Team</a>
+            <ul class="submenu">
+              <li class="menu__item">
+                <a class="menu__link" href="./our-team/guiding-light.html"
+                  >Our Guiding Light</a
+                >
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="./our-team/advisory-board.html"
+                  >Advisory Board</a
+                >
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="./our-team/secretariate.html"
+                  >Secretariat</a
+                >
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="./our-team/org-committee.html"
+                  >Organising Committee</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="./messages.html">Messages</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="./committes.html">Committees</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="">Apply</a>
+            <ul class="submenu">
+              <li class="menu__item">
+                <a class="menu__link" href="./forms/delegate.html"
+                  >Delegate Application</a
+                >
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="./forms/international.html"
+                  >International Press Application</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Gallery</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="./club.html">AMIMUN Club</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="">Resources</a>
+            <ul class="submenu">
+              <li class="menu__item">
+                <a class="menu__link" href="./resources/country-matrix.html"
+                  >Country Matrix</a
+                >
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="./resources/background-guides.html"
+                  >Background Guides</a
+                >
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="./resources/awards-criteria.html"
+                  >Award Criteria</a
+                >
+              </li>
+              <li class="menu__item">
+                <a
+                  class="menu__link"
+                  href="./resources/conference-schedule.html"
+                  >Conference Schedule</a
+                >
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
       <nav>
         <div class="menu-bar">
           <ul>
@@ -136,7 +222,7 @@
         <div class="content">
           <h1 class="text">Absolute Commitment</h1>
           <div class="img">
-            <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
+            <img src="./assets/DSC_0106-min.JPG" alt="" />
           </div>
           <p class="justified-content">
             The Secretariat of Amity International Model United Nations
@@ -153,7 +239,7 @@
         <div class="content">
           <h1 class="text">International Platform</h1>
           <div class="img">
-            <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
+            <img src="./assets/DSC_0360-min.JPG" alt="" />
           </div>
           <p class="justified-content">
             Amity University takes the honour of being an institute where
@@ -172,7 +258,7 @@
         <div class="content">
           <h1 class="text">Creativity & Innovation</h1>
           <div class="img">
-            <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
+            <img src="./assets/DSC_0507-min.JPG" alt="" />
           </div>
           <p class="justified-content">
             Amity University strives to promote creativity in terms of
@@ -184,7 +270,7 @@
         <div class="content">
           <h1 class="text">Brush Up Ingenuity</h1>
           <div class="img">
-            <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
+            <img src="./assets/DSC_3924-min.JPG" alt="" />
           </div>
           <p class="justified-content">
             AMIMUN has successfully created a platform where delegates have had
@@ -197,7 +283,7 @@
         <div class="content">
           <h1 class="text">Engaging & Paramount Motions</h1>
           <div class="img">
-            <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
+            <img src="./assets/DSC_4103-min.JPG" alt="" />
           </div>
           <p class="justified-content">
             The AMIMUN fraternity brings forth the most engaging motions aimed
@@ -240,7 +326,7 @@
       <div class="content">
         <h1 class="text">Academic Excellence</h1>
         <div class="img">
-          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
+          <img src="./assets/DSC_4197-min.JPG" alt="" />
         </div>
         <p class="justified-content">
           Amity University strives for the uncompromising quality and highest
@@ -252,7 +338,7 @@
       <div class="content">
         <h1 class="text">Integrity & Ethics</h1>
         <div class="img">
-          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
+          <img src="./assets/5.jpg" alt="" />
         </div>
         <p class="justified-content">
           Amity University upholds the highest ethical values, integrity and
@@ -264,7 +350,7 @@
       <div class="content">
         <h1 class="text">Diversity & Mutual Respect</h1>
         <div class="img">
-          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
+          <img src="./assets/WA_1-min.jpg" alt="" />
         </div>
         <p class="justified-content">
           Amity University nurtures an environment of safety, trust & mutual
@@ -276,7 +362,7 @@
       <div class="content">
         <h1 class="text">Expanding Horizons of Knowledge</h1>
         <div class="img">
-          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
+          <img src="./assets/Wide 1-min.JPG" alt="" />
         </div>
         <p class="justified-content">
           Amity University is driven by research and innovation and ensures
@@ -300,7 +386,7 @@
       <div class="content">
         <h1 class="text">Social Responsibility</h1>
         <div class="img">
-          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
+          <img src="./assets/DSC_4020-min.JPG" alt="" />
         </div>
         <p class="justified-content">
           Amity University creates and nurtures an inclusive environment where
@@ -312,7 +398,7 @@
       <div class="content">
         <h1 class="text">Environmental Responsibility</h1>
         <div class="img">
-          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
+          <img src="./assets/PSY00111.JPG" alt="" />
         </div>
         <p class="justified-content">
           Amity University is acutely aware of its environmental
@@ -325,7 +411,7 @@
       <div class="content">
         <h1 class="text">Service</h1>
         <div class="img">
-          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
+          <img src="./assets/WA_2-min.JPG" alt="" />
         </div>
         <p class="justified-content">
           Amity University seeks to serve the diverse, personal and professional
@@ -478,6 +564,7 @@
 
       $(function () {
         var elements = $(".text, .img, .justified-content").toArray();
+        console.log(elements)
         $(window).scroll(function () {
           elements.forEach(function (item) {
             if ($(this).scrollTop() >= $(item).offset().top - 600) {
@@ -485,11 +572,11 @@
             }
           });
         });
-        // elements.forEach(function (item) {
-        //   if ($(this).scrollTop() >= $(item).offset().top - 600) {
-        //     $(item).addClass("reveal");
-        //   }
-        // });
+        elements.forEach(function (item) {
+          if ($(this).scrollTop() >= $(item).offset().top - 600) {
+            $(item).addClass("reveal");
+          }
+        });
       });
     </script>
     <script
