--- a/club.html
+++ b/club.html
@@ -18,6 +18,90 @@
     <title>AMIMUN'22 | Home</title>
   </head>
   <body>
+    <nav id="main-navigation" class="nav-main">
+      <ul class="menu">
+        <li class="menu__item">
+          <a class="menu__link" href="./about.html">About</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="">Our Team</a>
+          <ul class="submenu">
+            <li class="menu__item">
+              <a class="menu__link" href="./our-team/guiding-light.html"
+                >Our Guiding Light</a
+              >
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="./our-team/advisory-board.html"
+                >Advisory Board</a
+              >
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="./our-team/secretariate.html"
+                >Secretariat</a
+              >
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="./our-team/org-committee.html"
+                >Organising Committee</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="./messages.html">Messages</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="./committes.html">Committees</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="">Apply</a>
+          <ul class="submenu">
+            <li class="menu__item">
+              <a class="menu__link" href="./forms/delegate.html"
+                >Delegate Application</a
+              >
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="./forms/international.html"
+                >International Press Application</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#">Gallery</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="./club.html">AMIMUN Club</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="">Resources</a>
+          <ul class="submenu">
+            <li class="menu__item">
+              <a class="menu__link" href="./resources/country-matrix.html"
+                >Country Matrix</a
+              >
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="./resources/background-guides.html"
+                >Background Guides</a
+              >
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="./resources/awards-criteria.html"
+                >Award Criteria</a
+              >
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="./resources/conference-schedule.html"
+                >Conference Schedule</a
+              >
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
     <div id="back">
       <nav>
         <div class="menu-bar">
@@ -202,8 +286,8 @@
           Conferences.<br />
 
           We believe in guiding and mentoring our fellow students and peers in
-          the Art of MUNing at the Club. This is the essence of AMIMUN
-          Club. We strive to be the best in order to give the best platforms and
+          the Art of MUNing at the Club. This is the essence of AMIMUN Club. We
+          strive to be the best in order to give the best platforms and
           opportunities for every individual who wishes to strive forth
           alongside us. AMIMUN Club is the largest student body at Amity, Noida,
           and we are very proud of all of our members and what they have
