--- a/forms/delegate.html
+++ b/forms/delegate.html
@@ -157,14 +157,16 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>AMIMUN Club</li>
+            <li><a href="../club.html">AMIMUN Club</a></li>
             <li>
               <a href="./resources.html">Resources</a>
               <i class="fas fa-chevron-down"></i>
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="../resources/country-matrix.html">Country Matrix</a>
+                    <a href="../resources/country-matrix.html"
+                      >Country Matrix</a
+                    >
                   </li>
                   <li>
                     <a href="../resources/background-guides.html"
@@ -212,7 +214,11 @@
         <input placeholder="888-888-8888" name="phone" type="number" />
 
         <label for="">Email</label>
-        <input placeholder="severus.snape@hogwards.com" name="email" type="email" />
+        <input
+          placeholder="severus.snape@hogwards.com"
+          name="email"
+          type="email"
+        />
 
         <label for="">College/Institute Name</label>
         <input placeholder="Slytherin" name="college" type="text" />
