--- a/forms/international.html
+++ b/forms/international.html
@@ -157,7 +157,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>AMIMUN Club</li>
+            <li><a href="../club.html">AMIMUN Club</a></li>
             <li>
               <a href="./resources.html">Resources</a>
               <i class="fas fa-chevron-down"></i>
@@ -212,7 +212,11 @@
         <input placeholder="888-888-8888" name="phone" type="number" />
 
         <label for="">Email</label>
-        <input placeholder="severus.snape@hogwards.com" name="email" type="email" />
+        <input
+          placeholder="severus.snape@hogwards.com"
+          name="email"
+          type="email"
+        />
 
         <label for="">College/Institute Name</label>
         <input placeholder="Slytherin" name="college" type="text" />
