--- a/resources/country-matrix.html
+++ b/resources/country-matrix.html
@@ -159,14 +159,16 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>AMIMUN Club</li>
+            <li><a href="../club.html">AMIMUN Club</a></li>
             <li>
               <a href="./resources.html">Resources</a>
               <i class="fas fa-chevron-down"></i>
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="../resources/country-matrix.html">Country Matrix</a>
+                    <a href="../resources/country-matrix.html"
+                      >Country Matrix</a
+                    >
                   </li>
                   <li>
                     <a href="../resources/background-guides.html"
