--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       src="https://kit.fontawesome.com/9cfd8f728d.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.11.4/TweenMax.min.js"></script>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -19,99 +23,101 @@
   <body>
     <div id="back">
       <input
-      type="checkbox"
-      id="main-navigation-toggle"
-      class="btn btn--close"
-      title="Toggle main navigation"
-    />
-    <label for="main-navigation-toggle">
-      <span></span>
-    </label>
+        type="checkbox"
+        id="main-navigation-toggle"
+        class="btn btn--close"
+        title="Toggle main navigation"
+      />
+      <label for="main-navigation-toggle">
+        <span></span>
+      </label>
 
-    <nav id="main-navigation" class="nav-main">
-      <ul class="menu">
-        <li class="menu__item">
-          <a class="menu__link" href="./about.html">About</a>
-        </li>
-        <li class="menu__item">
-          <a class="menu__link" href="">Our Team</a>
-          <ul class="submenu">
-            <li class="menu__item">
-              <a class="menu__link" href="./our-team/guiding-light.html"
-                >Our Guiding Light</a
-              >
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="./our-team/advisory-board.html"
-                >Advisory Board</a
-              >
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="./our-team/secretariate.html"
-                >Secretariat</a
-              >
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="./our-team/org-committee.html"
-                >Organising Committee</a
-              >
-            </li>
-          </ul>
-        </li>
-        <li class="menu__item">
-          <a class="menu__link" href="./messages.html">Messages</a>
-        </li>
-        <li class="menu__item">
-          <a class="menu__link" href="./committes.html">Committees</a>
-        </li>
-        <li class="menu__item">
-          <a class="menu__link" href="">Apply</a>
-          <ul class="submenu">
-            <li class="menu__item">
-              <a class="menu__link" href="./forms/delegate.html"
-                >Delegate Application</a
-              >
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="./forms/international.html"
-                >International Press Application</a
-              >
-            </li>
-          </ul>
-        </li>
-        <li class="menu__item">
-          <a class="menu__link" href="#">Gallery</a>
-        </li>
-        <li class="menu__item">
-          <a class="menu__link" href="./club.html">AMIMUN Club</a>
-        </li>
-        <li class="menu__item">
-          <a class="menu__link" href="">Resources</a>
-          <ul class="submenu">
-            <li class="menu__item">
-              <a class="menu__link" href="./resources/country-matrix.html"
-                >Country Matrix</a
-              >
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="./resources/background-guides.html"
-                >Background Guides</a
-              >
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="./resources/awards-criteria.html"
-                >Award Criteria</a
-              >
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="./resources/conference-schedule.html"
-                >Conference Schedule</a
-              >
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
+      <nav id="main-navigation" class="nav-main">
+        <ul class="menu">
+          <li class="menu__item">
+            <a class="menu__link" href="./about.html">About</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="">Our Team</a>
+            <ul class="submenu">
+              <li class="menu__item">
+                <a class="menu__link" href="./our-team/guiding-light.html"
+                  >Our Guiding Light</a
+                >
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="./our-team/advisory-board.html"
+                  >Advisory Board</a
+                >
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="./our-team/secretariate.html"
+                  >Secretariat</a
+                >
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="./our-team/org-committee.html"
+                  >Organising Committee</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="./messages.html">Messages</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="./committes.html">Committees</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="">Apply</a>
+            <ul class="submenu">
+              <li class="menu__item">
+                <a class="menu__link" href="./forms/delegate.html"
+                  >Delegate Application</a
+                >
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="./forms/international.html"
+                  >International Press Application</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Gallery</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="./club.html">AMIMUN Club</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="">Resources</a>
+            <ul class="submenu">
+              <li class="menu__item">
+                <a class="menu__link" href="./resources/country-matrix.html"
+                  >Country Matrix</a
+                >
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="./resources/background-guides.html"
+                  >Background Guides</a
+                >
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="./resources/awards-criteria.html"
+                  >Award Criteria</a
+                >
+              </li>
+              <li class="menu__item">
+                <a
+                  class="menu__link"
+                  href="./resources/conference-schedule.html"
+                  >Conference Schedule</a
+                >
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
       <p class="banner">
         Registration for AMIMUN 2022 has opened.
         <a href="./forms/delegate.html"> <u>Register now</u> </a> !
