fixed menu Apply on hover problem

--- a/about.html
+++ b/about.html
@@ -19,8 +19,32 @@
   </head>
   <body>
     <div id="back">
+      <input
+        type="checkbox"
+        id="main-navigation-toggle"
+        class="btn btn--close"
+        title="Toggle main navigation"
+      />
+      <label for="main-navigation-toggle">
+        <span></span>
+      </label>
       <nav id="main-navigation" class="nav-main">
         <ul class="menu">
+          <li class="menu__item">
+            <a class="menu__link" href="">Apply</a>
+            <ul class="submenu">
+              <li class="menu__item">
+                <a class="menu__link" href="./forms/delegate.html"
+                  >Delegate Application</a
+                >
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="./forms/international.html"
+                  >International Press Application</a
+                >
+              </li>
+            </ul>
+          </li>
           <li class="menu__item">
             <a class="menu__link" href="./about.html">About</a>
           </li>
@@ -55,21 +79,7 @@
           <li class="menu__item">
             <a class="menu__link" href="./committes.html">Committees</a>
           </li>
-          <li class="menu__item">
-            <a class="menu__link" href="">Apply</a>
-            <ul class="submenu">
-              <li class="menu__item">
-                <a class="menu__link" href="./forms/delegate.html"
-                  >Delegate Application</a
-                >
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="./forms/international.html"
-                  >International Press Application</a
-                >
-              </li>
-            </ul>
-          </li>
+        
           <li class="menu__item">
             <a class="menu__link" href="#">Gallery</a>
           </li>
@@ -91,7 +101,7 @@
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="./resources/awards-criteria.html"
-                  >Award Criteria</a
+                  >Newsletters</a
                 >
               </li>
               <li class="menu__item">
@@ -174,9 +184,7 @@
                     >
                   </li>
                   <li>
-                    <a href="./resources/awards-criteria.html"
-                      >Awards Criteria</a
-                    >
+                    <a href="./resources/awards-criteria.html">Newsletters</a>
                   </li>
                   <li>
                     <a href="./resources/conference-schedule.html">
@@ -305,19 +313,19 @@
       </h2>
       <div class="content">
         <p class="header-text header-sec">
-          <b>Our Vision</b> is to build the country by fortifying the general
-          public through providing collective, collaborative, teaching; so as to
-          be the worldwide leader in skill training and embodying our promise to
-          be the university where Modernity Blends with Tradition.<br />
+          <b>Our Vision</b> is to build the nation and the society through
+          providing total, integrated and trans-cultural quality education and
+          to be the global front runner in value education and nurturing talent
+          in which Modernity Blends with Tradition.<br />
 
-          <b>Our Mission</b> is to provide education, catering to all levels
-          across the ever-evolving sphere of modern events, developing frontier
-          areas of knowledge, learning, research and examination; building up
-          the general character of students. We not only create great experts
-          but well-rounded individuals. Our students understand and have respect
-          for human qualities, pride in their legacy and culture, can discern
-          what is right, and imbibe attributes of courage, conviction and of
-          action.
+          <b>Our Mission</b> is to provide education at all levels in all
+          disciplines of modern times and in the futuristic and emerging
+          frontier areas of knowledge, learning and research and to develop the
+          overall personality of students by making them not only excellent
+          professionals but also good individuals, with understanding and regard
+          for human values, pride in their heritage and culture, a sense of
+          right and wrong and yearning for perfection and imbibe attributes of
+          courage of conviction and action.
         </p>
       </div>
     </div>
@@ -411,7 +419,10 @@
       <div class="content">
         <h1 class="text">Service</h1>
         <div class="img">
-          <img src="./assets/WA_2-min.JPG" alt="" />
+          <img
+            src="./assets/WhatsApp Image 2021-10-26 at 8.46.13 AM.jpeg"
+            alt=""
+          />
         </div>
         <p class="justified-content">
           Amity University seeks to serve the diverse, personal and professional
@@ -429,7 +440,7 @@
 
           <p>
             January 22-23, 2022<br />
-            Amity Rd, Sector 125, Noida, Uttar Pradesh 201301
+            Amity Rd., Sector 125, Noida, Uttar Pradesh 201301
           </p>
 
           <iframe
