--- a/index.html
+++ b/index.html
@@ -21,103 +21,101 @@
     <title>AMIMUN'22 | Home</title>
   </head>
   <body>
-    <div id="back">
-      <input
-        type="checkbox"
-        id="main-navigation-toggle"
-        class="btn btn--close"
-        title="Toggle main navigation"
-      />
-      <label for="main-navigation-toggle">
-        <span></span>
-      </label>
+    <input
+      type="checkbox"
+      id="main-navigation-toggle"
+      class="btn btn--close"
+      title="Toggle main navigation"
+    />
+    <label for="main-navigation-toggle">
+      <span></span>
+    </label>
 
-      <nav id="main-navigation" class="nav-main">
-        <ul class="menu">
-          <li class="menu__item">
-            <a class="menu__link" href="./about.html">About</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="">Our Team</a>
-            <ul class="submenu">
-              <li class="menu__item">
-                <a class="menu__link" href="./our-team/guiding-light.html"
-                  >Our Guiding Light</a
-                >
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="./our-team/advisory-board.html"
-                  >Advisory Board</a
-                >
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="./our-team/secretariate.html"
-                  >Secretariat</a
-                >
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="./our-team/org-committee.html"
-                  >Organising Committee</a
-                >
-              </li>
-            </ul>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="./messages.html">Messages</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="./committes.html">Committees</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="">Apply</a>
-            <ul class="submenu">
-              <li class="menu__item">
-                <a class="menu__link" href="./forms/delegate.html"
-                  >Delegate Application</a
-                >
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="./forms/international.html"
-                  >International Press Application</a
-                >
-              </li>
-            </ul>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#">Gallery</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="./club.html">AMIMUN Club</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="">Resources</a>
-            <ul class="submenu">
-              <li class="menu__item">
-                <a class="menu__link" href="./resources/country-matrix.html"
-                  >Country Matrix</a
-                >
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="./resources/background-guides.html"
-                  >Background Guides</a
-                >
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="./resources/awards-criteria.html"
-                  >Award Criteria</a
-                >
-              </li>
-              <li class="menu__item">
-                <a
-                  class="menu__link"
-                  href="./resources/conference-schedule.html"
-                  >Conference Schedule</a
-                >
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
+    <nav id="main-navigation" class="nav-main">
+      <ul class="menu">
+        <li class="menu__item">
+          <a class="menu__link" href="">Apply</a>
+          <ul class="submenu">
+            <li class="menu__item">
+              <a class="menu__link" href="./forms/delegate.html"
+                >Delegate Application</a
+              >
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="./forms/international.html"
+                >International Press Application</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="./about.html">About</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="">Our Team</a>
+          <ul class="submenu">
+            <li class="menu__item">
+              <a class="menu__link" href="./our-team/guiding-light.html"
+                >Our Guiding Light</a
+              >
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="./our-team/advisory-board.html"
+                >Advisory Board</a
+              >
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="./our-team/secretariate.html"
+                >Secretariat</a
+              >
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="./our-team/org-committee.html"
+                >Organising Committee</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="./messages.html">Messages</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="./committes.html">Committees</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#">Gallery</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="./club.html">AMIMUN Club</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="">Resources</a>
+          <ul class="submenu">
+            <li class="menu__item">
+              <a class="menu__link" href="./resources/country-matrix.html"
+                >Country Matrix</a
+              >
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="./resources/background-guides.html"
+                >Background Guides</a
+              >
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="./resources/awards-criteria.html"
+                >Newsletters</a
+              >
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="./resources/conference-schedule.html"
+                >Conference Schedule</a
+              >
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+    <div id="back">
       <p class="banner">
         Registration for AMIMUN 2022 has opened.
         <a href="./forms/delegate.html"> <u>Register now</u> </a> !
@@ -191,9 +189,7 @@
                     >
                   </li>
                   <li>
-                    <a href="./resources/awards-criteria.html"
-                      >Awards Criteria</a
-                    >
+                    <a href="./resources/awards-criteria.html">Newsletters</a>
                   </li>
                   <li>
                     <a href="./resources/conference-schedule.html">
@@ -214,7 +210,8 @@
       <div class="header-section">
         <h2 class="header theme">Preserverantia Omnia Vincit<br /></h2>
         <h3 class="header-sec">
-          <b>January 22nd &mdash; January 23rd, 2022</b><br />
+          <b>January 22<sup>nd</sup> &mdash; January 23<sup>rd</sup>, 2022</b
+          ><br />
         </h3>
       </div>
 
@@ -238,15 +235,15 @@
         </div>
         <div id="videoplayer">
           <div class="videoplayer-center-text">
-            <h1 class="center-text">
+            <!-- <h1 class="center-text">
               <i>
                 "Perseverance doesn't always mean winning and losing.
                 Perseverance means showing up and rising to the occasion and
                 performing."</i
               ><br />
             </h1>
-            <h3 class="quote">&mdash; Michael Chiesa</h3>
-            <p id="timer"></p>
+            <h3 class="quote">&mdash; Michael Chiesa</h3> -->
+            <!-- <p id="timer"></p> -->
             <a href="./forms/delegate.html" class="btn">REGISTER</a>
           </div>
           <video
@@ -387,7 +384,7 @@
 
           <p>
             January 22-23, 2022<br />
-            Amity Rd, Sector 125, Noida, Uttar Pradesh 201301
+            Amity Rd., Sector 125, Noida, Uttar Pradesh 201301
           </p>
 
           <iframe
