--- a/resources/awards-criteria.html
+++ b/resources/awards-criteria.html
@@ -18,8 +18,32 @@
     <title>AMIMUN'22 | Home</title>
   </head>
   <body>
+    <input
+      type="checkbox"
+      id="main-navigation-toggle"
+      class="btn btn--close"
+      title="Toggle main navigation"
+    />
+    <label for="main-navigation-toggle">
+      <span></span>
+    </label>
     <nav id="main-navigation" class="nav-main">
       <ul class="menu">
+        <li class="menu__item">
+          <a class="menu__link" href="">Apply</a>
+          <ul class="submenu">
+            <li class="menu__item">
+              <a class="menu__link" href="../forms/delegate.html"
+                >Delegate Application</a
+              >
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="../forms/international.html"
+                >International Press Application</a
+              >
+            </li>
+          </ul>
+        </li>
         <li class="menu__item">
           <a class="menu__link" href="../about.html">About</a>
         </li>
@@ -54,21 +78,7 @@
         <li class="menu__item">
           <a class="menu__link" href="../committes.html">Committees</a>
         </li>
-        <li class="menu__item">
-          <a class="menu__link" href="">Apply</a>
-          <ul class="submenu">
-            <li class="menu__item">
-              <a class="menu__link" href="../forms/delegate.html"
-                >Delegate Application</a
-              >
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="../forms/international.html"
-                >International Press Application</a
-              >
-            </li>
-          </ul>
-        </li>
+
         <li class="menu__item">
           <a class="menu__link" href="#">Gallery</a>
         </li>
@@ -90,7 +100,7 @@
             </li>
             <li class="menu__item">
               <a class="menu__link" href="../resources/awards-criteria.html"
-                >Award Criteria</a
+                >Newsletters</a
               >
             </li>
             <li class="menu__item">
@@ -170,9 +180,7 @@
                     >
                   </li>
                   <li>
-                    <a href="../resources/awards-criteria.html"
-                      >Awards Criteria</a
-                    >
+                    <a href="../resources/awards-criteria.html">Newsletters</a>
                   </li>
                   <li>
                     <a href="../resources/conference-schedule.html">
@@ -191,7 +199,7 @@
       </nav>
 
       <div class="header-section">
-        <h2 class="header theme">Awards Criteria</h2>
+        <h2 class="header theme">Newsletters</h2>
         <div class="content">
           <h3 class="comming-soon">Coming Soon</h3>
           <!-- <h3 class="header-text header-sec">
@@ -222,7 +230,7 @@
 
           <p>
             January 22-23, 2022<br />
-            Amity Rd, Sector 125, Noida, Uttar Pradesh 201301
+            Amity Rd., Sector 125, Noida, Uttar Pradesh 201301
           </p>
 
           <iframe
