--- a/resources/country-matrix.html
+++ b/resources/country-matrix.html
@@ -20,8 +20,32 @@
     <title>AMIMUN'22 | Home</title>
   </head>
   <body>
+    <input
+      type="checkbox"
+      id="main-navigation-toggle"
+      class="btn btn--close"
+      title="Toggle main navigation"
+    />
+    <label for="main-navigation-toggle">
+      <span></span>
+    </label>
     <nav id="main-navigation" class="nav-main">
       <ul class="menu">
+        <li class="menu__item">
+          <a class="menu__link" href="">Apply</a>
+          <ul class="submenu">
+            <li class="menu__item">
+              <a class="menu__link" href="../forms/delegate.html"
+                >Delegate Application</a
+              >
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="../forms/international.html"
+                >International Press Application</a
+              >
+            </li>
+          </ul>
+        </li>
         <li class="menu__item">
           <a class="menu__link" href="../about.html">About</a>
         </li>
@@ -56,21 +80,7 @@
         <li class="menu__item">
           <a class="menu__link" href="../committes.html">Committees</a>
         </li>
-        <li class="menu__item">
-          <a class="menu__link" href="">Apply</a>
-          <ul class="submenu">
-            <li class="menu__item">
-              <a class="menu__link" href="../forms/delegate.html"
-                >Delegate Application</a
-              >
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="../forms/international.html"
-                >International Press Application</a
-              >
-            </li>
-          </ul>
-        </li>
+       
         <li class="menu__item">
           <a class="menu__link" href="#">Gallery</a>
         </li>
@@ -92,7 +102,7 @@
             </li>
             <li class="menu__item">
               <a class="menu__link" href="../resources/awards-criteria.html"
-                >Award Criteria</a
+                >Newsletters</a
               >
             </li>
             <li class="menu__item">
@@ -176,9 +186,7 @@
                     >
                   </li>
                   <li>
-                    <a href="../resources/awards-criteria.html"
-                      >Awards Criteria</a
-                    >
+                    <a href="../resources/awards-criteria.html">Newsletters</a>
                   </li>
                   <li>
                     <a href="../resources/conference-schedule.html">
@@ -802,7 +810,7 @@
 
           <p>
             January 22-23, 2022<br />
-            Amity Rd, Sector 125, Noida, Uttar Pradesh 201301
+            Amity Rd., Sector 125, Noida, Uttar Pradesh 201301
           </p>
 
           <iframe
