--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>AMIMUN'22 | Home</title>
   </head>
   <body>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">&uarr;</button>
     <div id="back">
       <!-- <p class="banner"><a href="#">Register now</a> for AMIMUN'22</p> -->
       <nav>
