Jump-to-top btn
Added to jump to top btn

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <title>AMIMUN'22 | Home</title>
   </head>
   <body>
+    <button onclick="topFunction()" id="topBtn" title="Go to top">&uarr;</button>
     <input
       type="checkbox"
       id="main-navigation-toggle"
