changed the video with img

--- a/forms/delegate.html
+++ b/forms/delegate.html
@@ -78,7 +78,7 @@
         <li class="menu__item">
           <a class="menu__link" href="../committes.html">Committees</a>
         </li>
-        
+
         <li class="menu__item">
           <a class="menu__link" href="#">Gallery</a>
         </li>
@@ -209,45 +209,56 @@
         <div class="name">
           <div class="first-name">
             <label for="">First Name</label>
-            <input placeholder="Severus" name="first-name" type="text" />
+            <input name="first-name" type="text" />
           </div>
 
           <div class="last-name">
             <label for="">Last Name</label>
-            <input placeholder="Snape" name="last-name" type="text" />
+            <input name="last-name" type="text" />
           </div>
         </div>
 
         <label for="">Phone</label>
-        <input placeholder="888-888-8888" name="phone" type="number" />
+        <input name="phone" type="number" />
 
         <label for="">Email</label>
-        <input
-          placeholder="severus.snape@hogwarts.com"
-          name="email"
-          type="email"
-        />
+        <input name="email" type="email" />
 
         <label for="">College/Institute Name</label>
-        <input placeholder="Slytherin" name="college" type="text" />
+        <input name="college" type="text" />
 
         <label for="">University Name</label>
-        <input placeholder="Hogwarts" name="university" type="text" />
+        <input name="university" type="text" />
+
+        <label for="">Are you associated with Amity University?</label><br />
+        <div class="attended-status">
+          <div class="status-1">
+            <label for="html">Yes</label>
+            <input type="radio" id="yes" name="fav_language" value="HTML" />
+          </div>
+          <div class="status-2">
+            <label for="css">No</label>
+            <input type="radio" id="no" name="fav_language" value="CSS" />
+          </div>
+        </div>
+
+        <label id="enrollment-label" for="enrollment">Amity Enrollment No.</label>
+        <input id="enrollment" name="enrollment" type="text" />
 
         <label for="">Academic Year</label>
-        <input placeholder="4" name="year" type="number" />
+        <input name="year" type="number" />
 
         <label for="">Country</label>
-        <input placeholder="United Kingdom" name="university" type="text" />
+        <input name="university" type="text" />
 
         <label for="">State</label>
-        <input placeholder="England" name="university" type="text" />
+        <input name="university" type="text" />
 
         <label for="">City</label>
-        <input placeholder="Leavesden" name="university" type="text" />
+        <input name="university" type="text" />
 
         <label for="">ZIP</label>
-        <input placeholder="9¾" name="university" type="text" />
+        <input name="university" type="text" />
 
         <hr />
 
@@ -326,6 +337,18 @@
             cols="50"
             placeholder="Maximum 500 words"
           ></textarea>
+
+          <label for="answer"
+            >What do you believe are the different Challenges and Opportunities in the Post COVID-19 World?</label
+          >
+
+          <textarea
+            id="answer"
+            name="answer"
+            rows="4"
+            cols="50"
+            placeholder="Maximum 200 words"
+          ></textarea>
         </div>
 
         <hr />
@@ -379,7 +402,7 @@
 
           <div class="contact">
             <p><b>Zeeshan Ahmad Fareed</b>, Director General</p>
-            <a href="tel:+91 99996 08171">+91 99996 08171</a><br />
+            <a href="tel:+91 99996 98171">+91 99996 98171</a><br />
             <a href="mailto:  dgamimun22@gmail.com"> dgamimun22@gmail.com</a>
           </div>
 
