--- a/index.html
+++ b/index.html
@@ -246,14 +246,15 @@
             <!-- <p id="timer"></p> -->
             <a href="./forms/delegate.html" class="btn">REGISTER</a>
           </div>
-          <video
+          <img src="./assets/pexels-mathias-pr-reding-4468974-2.jpg" id="vid" alt="" srcset="">
+          <!-- <video
             id="vid"
             src="./assets/movie.mp4"
             type="video/mp4"
             autoplay
             muted
             loop
-          ></video>
+          ></video> -->
         </div>
         <div id="holder2" class="holder">
           <div id="four" class="imgcontainer"></div>
@@ -411,7 +412,7 @@
 
           <div class="contact">
             <p><b>Zeeshan Ahmad Fareed</b>, Director General</p>
-            <a href="tel:+91 99996 08171">+91 99996 08171</a><br />
+            <a href="tel:+91 99996 98171">+91 99996 98171</a><br />
             <a href="mailto:  dgamimun22@gmail.com"> dgamimun22@gmail.com</a>
           </div>
 
